# e-commerce-api-rust

ecom_api/: .dockerignore  Cargo.toml  Dockerfile
ecom_api/src/: main.rs
ecom_api/src/controller/: cart.rs  mod.rs  product.rs  user.rs  wishlist.rs
ecom_api/src/database/: mod.rs
ecom_api/src/middleware/: mod.rs
ecom_api/src/serializers/: mod.rs
ecom_api/src/utilities/: mod.rs
