[package]
name = "ecom_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4"
pwhash = "1"
futures-util = "0.3.24"
jsonwebtoken = "=7.2"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]